Lowercase package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "WebuddhaInc/Params",
+  "name": "webuddhainc/params",
   "description": "PHP Parameters Class",
   "keywords": [
     "php",
